<resources>
    <string name="app_name">Ceocat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_login">ADMIN LOGIN</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="password2">Password</string>
    <string name="someone_email_com">someone.email.com</string>
    <string name="login">Login</string>
    <string name="admin_register">ADMIN REGISTER</string>
    <string name="register">Register</string>
    <string name="need_and_account_click_here">Need and Account? Click here</string>
    <string name="already_have_an_account_click_here">Already have an account? Click here</string>
    <string name="log_out">LOG-OUT</string>
    <string name="update">UPDATE</string>
    <string name="confirm">CONFIRM</string>
    <string name="get_started">Get Started</string>
    <string name="account_login">ACCOUNT LOGIN</string>
    <string name="name">NAME</string>
    <string name="email_address1">EMAIL ADDRESS</string>
    <string name="PASS">PASSWORD</string>
</resources>