<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLogin"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/whitepurple"
    android:padding="10dp">

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/baseline_arrow_back_ios_24"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:id="@+id/backBtn"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_login"
        android:textSize="30sp"
        android:fontFamily="@font/scblack"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black">


    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:layout_marginStart="30dp"
        android:textSize="10sp"
        android:fontFamily="@font/regular"
        android:textColor="@color/black"
        android:layout_marginTop="40dp">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="330dp"
        android:background="@drawable/rectangle_curved2"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/adminEmail"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/regular"
            android:background="@android:color/transparent"
            android:textColor="@color/black"


            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="10sp"
        android:fontFamily="@font/regular"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:layout_marginStart="30dp">


    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="330dp"
        android:background="@drawable/rectangle_curved2"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/adminPassword"
            android:fontFamily="@font/regular"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/black"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_marginStart="170dp"
        android:visibility="gone"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginAdminBtn"
        android:text="@string/login"
        android:layout_marginStart="250dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/bold">


    </Button>

    <TextView
        android:id="@+id/registerNowAdmin"
        android:fontFamily="@font/scregular"
        android:layout_marginTop="12dp"
        android:layout_marginStart="30dp"
        android:textSize="15sp"
        android:text="@string/need_and_account_click_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>